--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		
-
-		
 		<!--头部-->
 		<div class="head">
 			<div class="head_nav">XiaoPang</div>
 			<ul>
-				<li><a href="#">叫什么②号</a></li>
-				<li><a href="#">叫什么①号</a></li>
-				<li><a href="#">首页</a></li>
+				<li><a href="#">JavaScript</a></li>
+				<li><a href="#">css</a></li>
+				<li><a href="#">html</a></li>
+				<li><a href="index.html">首页</a></li>
 			</ul>
 		</div>
 		<!--主要显示界面-->
@@ -24,13 +22,13 @@
 			<div class="main_left">
 				<div class="l_box">
 					<img src="img/1.jpg"/>
-					<div class="l_title">这是左侧的标题<br/>
-						<span>这里可以写日期</span>
+					<div class="l_title">git 命令<br/>
+						<span>2017/3/31</span>
 					</div>
-					<div class="l_text">好嘞，这是我们的第一行<br/>这是第二行的描述文字
-						<br/>必须要科普一下!!这些都是重点和精华啊！必须要科普一下!!这些都是重点和精华啊！
+					<div class="l_text">分布式版本控制系统<br/>免费、开源的分布式版本控制系统
+						<br/>用于敏捷高效地处理任何或小或大的项目
 					</div>
-					<a class="btn" href="#">点我</a>
+					<a class="btn" href="summary/git.html">点我</a>
 				</div>
 				<div class="l_box">
 					<img src="img/2.jpg"/>
@@ -75,29 +73,30 @@
 						<li><a href="#">这里是标题</a></li>
 						<li><a href="#">这里是标题</a></li>
 						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
 					</ul>
 				</div>
-				<div class="r_box  ">
+				<div class="r_box">
 					<div class="r_title">CSS</div>
 					<ul>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
+						<li><a href="position.html">初级定位</a></li>
+						<li><a href="choose.html">选择器</a></li>
 					</ul>
 				</div>
-				<div class="r_box  ">
+				<div class="r_box">
 					<div class="r_title">JavaScript</div>
 					<ul>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
+						<li><a href="summary/js_base.html">基础</a></li>
+						<li><a href="summary/grammar_statement.html">语法、流程控制语句</a></li>
+						<li><a href="summary/function_object_array.html">函数(方法)、对象和数组</a></li>
+						<li><a href="summary/array.html">对象和数组（数组）</a></li>
+						<li><a href="summary/time_date.html">时间与日期</a></li>
+						<li><a href="summary/reg.html">正则表达式</a></li>
+						<li><a href="summary/function_main.html">function 函数深入</a></li>
+						<li><a href="summary/variable_scope_memory.html">变量、作用域及内存</a></li>
+						<li><a href="summary/pack.html">基本包装类型</a></li>
+						<li><a href="summary/object.html">对象</a></li>
+						<li><a href="summary/face_closure.html">面向对象、闭包</a></li>
+						<li><a href="summary/strict.html">严格模式</a></li>
 					</ul>
 				</div>
 			</div>
