--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>小胖的博客</title>
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
@@ -32,13 +32,13 @@
 				</div>
 				<div class="l_box">
 					<img src="img/2.jpg"/>
-					<div class="l_title">这是左侧的标题<br/>
-						<span>这里可以写日期</span>
+					<div class="l_title">融都P2P平台<br/>
+						<span>清明时节雨纷纷</span>
 					</div>
-					<div class="l_text">好嘞，这是我们的第一行<br/>这是第二行的描述文字
-						<br/>必须要科普一下!!这些都是重点和精华啊！必须要科普一下!!这些都是重点和精华啊！
+					<div class="l_text">这是一个操作业务的过程<br/>包括前台和后台的测试
+						<br/>主要目的是为了熟悉各个环节的业务流程
 					</div>
-					<a class="btn" href="#">点我</a>
+					<a class="btn" href="summary/P2P.html">点我</a>
 				</div>
 				<div class="l_box">
 					<img src="img/1.jpg"/>
@@ -64,27 +64,11 @@
 			</div>
 			<!--右边显示部分-->
 			<div class="main_right">
-				<!--html部分-->
 				<div class="r_box">
-					<div class="r_title">HTML</div>
+					<div class="r_title">初级</div>
 					<ul>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-						<li><a href="#">这里是标题</a></li>
-					</ul>
-				</div>
-				<div class="r_box">
-					<div class="r_title">CSS</div>
-					<ul>
-						<li><a href="position.html">初级定位</a></li>
-						<li><a href="choose.html">选择器</a></li>
-					</ul>
-				</div>
-				<div class="r_box">
-					<div class="r_title">JavaScript</div>
-					<ul>
+						<li><a href="summary/position.html">初级定位</a></li>
+						<li><a href="summary/choose.html">选择器</a></li>
 						<li><a href="summary/js_base.html">基础</a></li>
 						<li><a href="summary/grammar_statement.html">语法、流程控制语句</a></li>
 						<li><a href="summary/function_object_array.html">函数(方法)、对象和数组</a></li>
@@ -97,6 +81,12 @@
 						<li><a href="summary/object.html">对象</a></li>
 						<li><a href="summary/face_closure.html">面向对象、闭包</a></li>
 						<li><a href="summary/strict.html">严格模式</a></li>
+					</ul>
+				</div>
+				<div class="r_box">
+					<div class="r_title">中级</div>
+					<ul>
+						<li><a href="summary/DOM.html">DOM</a></li>
 					</ul>
 				</div>
 			</div>
