--- a/index.html
+++ b/index.html
@@ -65,28 +65,29 @@
 			<!--右边显示部分-->
 			<div class="main_right">
 				<div class="r_box">
-					<div class="r_title">初级</div>
+					<div class="r_title">基础知识</div>
 					<ul>
-						<li><a href="summary/position.html">初级定位</a></li>
-						<li><a href="summary/choose.html">选择器</a></li>
-						<li><a href="summary/js_base.html">基础</a></li>
-						<li><a href="summary/grammar_statement.html">语法、流程控制语句</a></li>
-						<li><a href="summary/function_object_array.html">函数(方法)、对象和数组</a></li>
-						<li><a href="summary/array.html">对象和数组（数组）</a></li>
-						<li><a href="summary/time_date.html">时间与日期</a></li>
-						<li><a href="summary/reg.html">正则表达式</a></li>
-						<li><a href="summary/function_main.html">function 函数深入</a></li>
-						<li><a href="summary/variable_scope_memory.html">变量、作用域及内存</a></li>
-						<li><a href="summary/pack.html">基本包装类型</a></li>
-						<li><a href="summary/object.html">对象</a></li>
-						<li><a href="summary/face_closure.html">面向对象、闭包</a></li>
-						<li><a href="summary/strict.html">严格模式</a></li>
+						<li><a href="summary/position.html">css 初级定位</a></li>
+						<li><a href="summary/choose.html">css 选择器</a></li>
+						<li><a href="summary/js_base.html">JS 基础</a></li>
+						<li><a href="summary/grammar_statement.html">JS 语法、流程控制语句</a></li>
+						<li><a href="summary/function_object_array.html">JS 函数(方法)、对象和数组</a></li>
+						<li><a href="summary/array.html">JS 对象和数组（数组）</a></li>
+						<li><a href="summary/time_date.html">JS 时间与日期</a></li>
+						<li><a href="summary/reg.html">JS 正则表达式</a></li>
+						<li><a href="summary/function_main.html">JS function 函数深入</a></li>
+						<li><a href="summary/variable_scope_memory.html">JS 变量、作用域及内存</a></li>
+						<li><a href="summary/pack.html">JS 基本包装类型</a></li>
+						<li><a href="summary/object.html">JS 对象</a></li>
+						<li><a href="summary/face_closure.html">JS 面向对象、闭包</a></li>
+						<li><a href="summary/strict.html">JS 严格模式</a></li>
 					</ul>
 				</div>
 				<div class="r_box">
-					<div class="r_title">中级</div>
+					<div class="r_title">中级进阶</div>
 					<ul>
-						<li><a href="summary/DOM.html">DOM</a></li>
+						<li><a href="summary/DOM.html">初识DOM 节点</a></li>
+						<li><a href="summary/element对象 .html">4.5 HTML DOM Element 对象</a></li>
 					</ul>
 				</div>
 			</div>
