--- a/summary/DOM.html
+++ b/summary/DOM.html
@@ -44,7 +44,8 @@
 					<li>document对象
 						<ul class="second">
 							<li>document.getElementById():传入ID，得到元素节点</li>
-							<li>document.getElementsByClassName():返回文档中所有指定类名的元素集合，作为NodeList对象，可以使用 NodeList 对象的 length 属性来确定指定类名的元素个数，并循环各个元素来获取你需要的那个元素</li>
+							<li>document.getElementsByClassName():返回文档中所有指定类名的元素集合，作为NodeList对象，可以使用 NodeList 对象的 length 属性来确定指定类名的元素个数，并循环各个元素来获取你需要的那个元素
+							</li>
 							<li>document.getElementsByTagName():根据标签取得元素</li>
 							<li>document.getElementsByName():返回带有指定名称的对象集合</li>
 							<li>createElement():创建元素节点，可返回一个element对象
