--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="r_title">中级进阶</div>
 					<ul>
 						<li><a href="summary/DOM.html">初识DOM 节点</a></li>
-						<li><a href="summary/element对象 .html">4.5 HTML DOM Element 对象</a></li>
+						<li><a href="summary/element对象 .html">4.5 HTML DOM Element 对象/ table对象</a></li>
 					</ul>
 				</div>
 			</div>
