--- a/summary/DOM.html
+++ b/summary/DOM.html
@@ -20,7 +20,7 @@
 		<div class="box">
 			<div class="left">
 				<h2>DOM（文档对象模型）</h2>
-				<div>用于HTML的应用程序接口，有三个级别；通过DOM可以去改变文档；一共有12种类型</div>
+				<div>用于HTML的应用程序接口，有三个级别；通过DOM可以去改变文档(提供给Javascript用来动态修改文档状态)；一共有12种类型</div><br/>
 				<ul class="first">
 					<li>DONE对象：一种用来表示HTML元素的原始数据类型，即是所有节点的基类型，所有节点都继承自它，所以所有节点都有一些共同的方法和属性
 						<div class="example">节点对象代表文档树中一个单独的节点（HTML文档中所有的内容都是节点，如标签、空白的地方等）</div>
