--- a/summary/element对象 .html
+++ b/summary/element对象 .html
@@ -70,7 +70,9 @@
 				<h2>今天的一个重点就是DOM 中的table对象</h2>
 				<ul class="first">
 					<li>tBodies[]:返回包含表格中所有 tbody 的一个数组。</li>
-					<li>rows[]:返回包含表格中所有行的一个数组。</li>
+					<li>rows[]:返回包含表格中所有行的一个数组。
+						<div class="example">rows[]是表格所有行组成的数组，rows.length代表了表格的行数，利用循环在表格每行的开始处插入单元格，innerHTML属性为单元格设置内容。</div>
+					</li>
 					<li>cells[]:返回包含表格中所有单元格的一个数组。</li>
 					<div>直接上一个表格移入移出的事件吧，觉得这样比较好理解</div>
 					<pre class="example">
