--- a/summary/array.html
+++ b/summary/array.html
@@ -70,7 +70,28 @@
 							num(arr);
 							alert(arr);      //输出结果 9,6,4,3,2
 					</pre>
-		
+					<li>数组的比较问题
+						<ul class="second">
+							<li>Javascript不能直接用==或者===来判断两个数组是否相等，无论是相等还是全等都不行，以下两行JS代码都会返回false
+								<pre class="example">
+								alert([]==[]);
+								alert([]===[]);
+								</pre>
+							</li>
+							<li>要判断JS中的两个数组是否相同，需要先将数组转换为字符串，再作比较。以下两行代码将都会返回true
+								<pre class="example">
+								alert([].toString()== [].toString());
+								alert([].toString()===[].toString());
+								</pre>
+							</li>
+							<li>JS要比较两个数组是否有相同的元素，即两个数组所有元素都相同，但元素的顺序不一定一致。只就需要先将数组进行排序，再比较两个数组是否相等。
+								<pre class="example">
+								alert([1,2,3].toString()== [3,2,1].toString());
+								alert([1,2,3].sort().toString()== [3,2,1].sort().toString());
+								</pre>
+							</li>
+						</ul>
+					</li>
 					<li><div class="font">对象和数组都有toString()、valueof()、toLocalString()方法<br/>都是返回对应的字符串</div></li>
 					<li><div class="font">join方法（不会对原数组进行修改）</div>
 						<pre class="example">
