--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 					<ul>
 						<li><a href="summary/DOM.html">初识DOM 节点</a></li>
 						<li><a href="summary/element对象 .html">4.5 HTML DOM Element 对象/ table对象</a></li>
+						<li><a href="summary/search.html">4.6 搜索的各种注意点和方法</a></li>
 					</ul>
 				</div>
 			</div>
