--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 						<li><a href="summary/DOM.html">初识DOM 节点</a></li>
 						<li><a href="summary/element对象 .html">4.5 HTML DOM Element 对象/ table对象</a></li>
 						<li><a href="summary/search.html">4.6 搜索需求/BOM</a></li>
+						<li><a href="summary/Event.html">4.7 JS Event事件</a></li>
 					</ul>
 				</div>
 			</div>
