--- a/summary/Event.html
+++ b/summary/Event.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>搜索/BOM</title>
+		<title>Event 事件</title>
 		<link rel="stylesheet" href="../css/index.css" />
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 	</head>
