--- a/summary/Event.html
+++ b/summary/Event.html
@@ -19,112 +19,80 @@
 		</div>
 		<div class="box">
 			<div class="left">
-				<h2>搜索功能的相关注意点</h2>
-				<div class="example">包括模糊查询，忽略大小写等</div><br />
+				<h2>Event 事件   （Firefox不支持）</h2>
+				<div class="example">函数不会再事件发生前被执行（通常与函数结合使用）</div><br />
 				<ul class="first">
-					<li>遇到大小写需要忽略的情况，通过toLocalLowerCase(),将字母都转成小写</li>
-					<li>indexOf() 方法：可返回某个指定字符串中首次出现的位置，找不到则返回-1
-						<pre class="example">
-						name = "index" ;
-						name.indexOf("a");   =>-1
-						name.indexOf("d");   =>2
-						若想要忽略大小写，就必须结合toLocalLowerCase()
-						</pre>
-					</li>
-					<li>筛选（多个筛选）
-						<pre class="example">
-						function research(){
-							var name = document.getElementById("name").value;
-							var arr = name.split(" ");
-							var oldColor;
-							//多个判断
-							for(var j = 0;j < arr.length; j ++){
-								var str = arr[j];
-									for( var i = 0 ;i < tb.length;i++ ){
-										//大小写忽略          tb = table.tBodies[0].rows;
-										if(tb[i].cells[1].innerText.toLocaleLowerCase().indexOf(str.toLocaleLowerCase())>-1){
-										tb[i].style.backgroundColor="yellow";	        //改变查找到的对象的背景颜色
-									}
-								}
-							}
-						}
-						</pre>
-					</li>
-					<li>排序
-						<pre class="example">
-						function rank(){
-							var arr = [];
-							for(var i = 0;i< tb.length;i++){
-								arr.push(tb[i]);  		 // tb = table.tBodies[0].rows;
-								arr[i]=tb[i];    		 //与上面写法的效果是一样的，都是把行放入数组
-							}
-							arr.sort(function(tr1,tr2){
-								var a = parseInt(tr1.cells[3].innerText); 
-								var b = parseInt(tr2.cells[3].innerText);
-								return a - b;
-							});
-							for(var j = 0 ;j< arr.length;j++){
-								td.tBodies[0].appendChild(arr[j]);
-							}
-						}
-						
-						</pre>
-						<div class="font">在这里我们要注意一下appendChild的一个用法，假设父级a中已经有子节点b，那么appendChild
-						的作用是<br/> 1.先将子节点b从父级a中删除；2.再将子节点b添加到a中，放在最末尾。</div>
-					</li>
-				</ul>
-				<h2>BOM:浏览器对象模型(浏览器窗口与窗口之间的介质)</h2>
-				<div>由于BOM主要用于管理窗口与窗口之间的通讯，因此其核心对象是window；BOM由一系列相关的对象构成，并且每个对象都提供了很多方法与属性；</div><br/>
-				<ul class="first">
-					<li>与浏览器窗口交互的一些对象，例如可以移动、调整浏览器大小的window对象，可以用于导航的location对象与history对象，可以获取浏览器、操作系统与用户屏幕信息的navigator与screen对象，可以使用document作为访问HTML文档的入口，管理框架的frames对象等。Location、Screen、Navigator、History。< /li>
-					<pre class="example">
-						
-								<img src="../img/num/BOM.jpg"/>
-					</pre>
-					<li>window.open
-						<pre class="example">
-						window.open("about:block");					//打开空白页（新窗口）
-						window.open("http://www.baidu.com","_self");	//在当前窗口打开
-						</pre>					
-					</li>
-					<li>事件参数e
-						<div class="font">当事件发生的时候，系统会自动的给事件处理函数传递一个参数，会提供事件相关的一些数据，事件参数e浏览器的兼容性检测: e = e || event</div>
-						<pre class="example">
-						document.onmousemove = function(e){
-							var scollTop = document.documentElement.scrollTop || document.body.scrollTop;
-							var scollLeft = document.documentElement.scollLeft || document.body.scollLeft;
-							var evt = e || event;
-							div.style.left = evt.clientX  +scollLeft  + "px";
-							div.style.top = evt.clientY + scollTop + "px";
-						}
-						</pre>
-					</li>
-					<li>window.location:访问当前地址；还可以赋值</li>
-					<li>client系列
+					<li>DOM事件流
 						<ul class="second">
-							<li>clientX ：获取鼠标在可视区域的位置= width + padding</li>
-							<li>clientY = height + padding</li>
-							<li>clientLeft ：边框的宽度，若有滚动条的话，包括滚动条</li>
-							<li>window.document.documentElement.clientWidth：可视宽<br/>
-								window.document.documentElement.clientHeight：可视高
-								<div class="font">注意：最好取整，因为某些电脑的显示会出现小数点</div>
-							</li>
-							<pre class="example">
-							获取页面可视区域大小
-							function client() {
-								return {
-										clientWidth: window.innerWidth || document.body.clientWidth || document.documentElement.clientWidth || 0;
-										clientHeight: window.innerHeight || document.body.clientHeitght || document.documentElement.clientHeight || 0;
-									};
+							<li>冒泡事件：事件从事件目标(target)开始，往上冒泡直到页面的最上一级标签<br/> div -> body -> html -> document -> window
+								<pre class="example">
+								if(event.stopPropagation){
+								　　event.StopPropagation();				// 非ie
+								}else{
+								    event.cancelBubble = true;				// ie
 								}
-							</pre>
+								</pre>
+							</li>
+							<li>捕获事件:事件从最上一级标签开始往下查找，直到捕获到事件目标(target)</li>
 						</ul>
 					</li>
-					<li>scrollTop：滚动条距离文档头部的距离
+					<li>取消默认事件
+						<ul class="second">
+							<li>event.stopPropagation():事件停止冒泡到，即不让事件再向上传递到document，但是此事件的默认行为仍然被执行，如点击一个链接，调用了event.stopPropagation()，链接仍然会被打开</li>
+							<li>event.preventDefault(): 取消了事件的默认行为，如点击一个链接，链接不会被打开，但是此事件仍然会传递给更上一层的先辈元素</li>
+							<li>在事件处理函数中使用 return false; 相当于同时调用了event.stopPropagation()和event.preventDefault()，事件的默认行为不会被执行，事件也不会冒泡向上传递。</li>
+						</ul>
+					</li>
+					<li>获取坐标的一个兼容问题
 						<pre class="example">
-						var scrollTop = window.document.documentElement.scrollTop || window.document.body.scrollTop;
-						alert(scrollTop);    <span class="font">//因为chorme不支持，所以要加一个判断，写成window.document.body.scrollTop</span>
-						</pre>	
+						document.onclick=function(e){
+							var evt = e || event;
+							alert(evt.clientX);
+						}
+						</pre>
+					</li>
+					<li>清除一个事件
+						<div class="example">div.onmousemove = null;</div>
+					</li>
+					<li>鼠标事件
+						<ul class="second">
+							<li>mousedown:鼠标设备按下一个元素的时候触发mousedown事件</li>
+							<li>mouseup: 鼠标设备从按下的元素上弹起的时候触发mouseup事件</li>
+							<li>click:鼠标点击元素的时候触发click事件</li>
+							<li>dblclick:鼠标双击元素的时候触发dblclick事件</li>
+							<li>mousemover:鼠标移动到某元素上的时候触发mousemove事件</li>
+							<li>mouseout：鼠标从某元素离开的时候触发mouseout事件</li>
+							<li>mousemove：鼠标在某元素上移动但未离开的时候触发mousemove事件</li>
+							<li>mousewheel：当使用滚轮时触发</li>
+							<li>contextmenu：显示菜单时会触发些事件</li>
+							<li>detail：对于click事件来讲他指定了是单击还是双击还是三击</li>
+							<li>altKey、ctrlKey、metakey和shiftKey：组合键当键盘按下这几个按钮时返回 true</li>
+						</ul>
+					</li>
+					<li>键盘事件
+						<ul class="second">
+							<li>keypress:按键按下的时候触发该事件</li>
+							<li>keydown:按键按下的时候触发该事件，并且在keypress事件之前</li>
+							<li>keyup:按键松开的时候触发该事件，在keydown和keypress事件之后</li>
+						</ul>
+					</li>
+					<li>表单事件
+						<ul class="second">
+							<li>select:文本字段（input, textarea等）的文本被选择的时候触发该事件</li>
+							<li>change:控件失去input焦点的时候触发该事件（或者值被改变的时候）</li>
+							<li>submit:表单提交的时候触发该事件</li>
+							<li>reset:表单重置的时候触发该事件</li>
+							<li>focus: 元素获得焦点的时候触发该事件，通常来自鼠标设备或Tab导航</li>
+							<li>blur:元素失去焦点的时候触发该事件，通常来自鼠标设备或Tab导航</li>
+						</ul>
+					</li>
+					<li>window事件
+						<ul class="second">
+							<li>load:页面加载完毕（包括内容、图片、frame、object）的时候触发该事件</li>
+							<li>resize:页面大小改变的时候触发该事件（例如浏览器缩放）</li>
+							<li>scroll:页面滚动的时候触发该事件</li>
+							<li>unload:从页面或frame删除所有内容的时候触发该事件（例如离开一个页面）</li>
+						</ul>
 					</li>
 				</ul>
 			</div>
