--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 					<ul>
 						<li><a href="summary/DOM.html">初识DOM 节点</a></li>
 						<li><a href="summary/element对象 .html">4.5 HTML DOM Element 对象/ table对象</a></li>
-						<li><a href="summary/search.html">4.6 搜索需求/BOM</a></li>
-						<li><a href="summary/Event.html">4.7 JS Event事件</a></li>
+						<li><a href="summary/search.html">4.6  搜索需求/BOM</a></li>
+						<li><a href="summary/Event.html">4.7 Event事件/4.10  补充手势事件</a></li>
+						<li><a href="summary/4.10eventBinding.html">4.10 JS 事件侦听</a></li>
 					</ul>
 				</div>
 			</div>
