--- a/summary/4.10eventBinding.html
+++ b/summary/4.10eventBinding.html
@@ -24,7 +24,7 @@
 					<li>attachEvent事件：要注意的是火狐不兼容
 						<pre class="example">
 							
-							attachEvent("onclick",function(){]})
+							attachEvent("onclick",function(){})
 						</pre>
 					</li>
 					<li>addEventListener事件：要注意的是IE不兼容
