--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 						<li><a href="summary/search.html">4.6  搜索需求/BOM</a></li>
 						<li><a href="summary/Event.html">4.7 Event事件/4.10  补充手势事件</a></li>
 						<li><a href="summary/4.10eventBinding.html">4.10 JS 事件侦听</a></li>
+						<li><a href="summary/4.10eventBinding.html">4.11-4.12 JS </a></li>
 					</ul>
 				</div>
 			</div>
