--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	</head>
 	<body>
 		<!--头部-->
+		
+		<!--<div class="box">
+			<embed src="http://7xs9v3.com1.z0.glb.clouddn.com/honehone_clock_tr.swf"></embed>
+		</div>-->
 		<div class="head">
 			<div class="head_nav">XiaoPang</div>
 			<ul>
@@ -91,7 +95,8 @@
 						<li><a href="summary/search.html">4.6  搜索需求/BOM</a></li>
 						<li><a href="summary/Event.html">4.7 Event事件/4.10  补充手势事件</a></li>
 						<li><a href="summary/4.10eventBinding.html">4.10 JS 事件侦听</a></li>
-						<li><a href="summary/4.10eventBinding.html">4.11-4.12 JS </a></li>
+						<li><a href="summary/4.10eventBinding.html">4.11-4.12 各种神奇的效果</a></li>
+						<li><a href="summary/4.13 this_OOP.html">4.13 面向对象、this的指向</a></li>
 					</ul>
 				</div>
 			</div>
