--- a/summary/4.10eventBinding.html
+++ b/summary/4.10eventBinding.html
@@ -20,6 +20,8 @@
 		<div class="box">
 			<div class="left">
 				<h2>事件侦听</h2>
+				<div class="font">当同一个对象使用.onclick的写法触发多个方法的时候，后一个方法会把前一个方法覆盖掉，也就是说，在对象的onclick事件发生时，只会执行最后绑定的方法。
+					而用事件监听则不会有覆盖的现象，每个绑定的事件都会被执行</div><br />
 				<ul class="first">
 					<li>attachEvent事件：要注意的是火狐不兼容
 						<pre class="example">
