--- a/summary/face_closure.html
+++ b/summary/face_closure.html
@@ -56,7 +56,7 @@
 						}
 						function toString(obj){
 							for(attr in obj){
-								document.write(attr+":"+obj[attr]+"<br/>");
+								document.write(attr+":"+obj[attr]);
 							}
 						}
 						// 让Student.prototype（原型）的指向修改成一个用Object.create创建的一个对象
