--- a/summary/4.13 this_OOP.html
+++ b/summary/4.13 this_OOP.html
@@ -23,7 +23,7 @@
 				<h2>关于this的指向问题：this是在函数真正被调用执行的时候确定的</h2>
 				<ul class="first">
 					<li>构造函数
-						<pre>
+						<pre class="example">
 						function Foo(){
 							this.name = "xiaohei";
 							this.year = 1988;
@@ -37,7 +37,7 @@
 					</li>
 					<li>函数作为对象的一个属性
 						<div class="example">若函数作为对象的一个属性时，并且作为对象的一个属性被调用时，函数中的this指向该对象</div>
-						<pre>
+						<pre class="example">
 						var obj ={
 							x:10,
 							fn:function(){
@@ -58,7 +58,7 @@
 					</li>
 					<li>全局 & 普通调用
 						<div class="font">全局环境下，this永远指向window<br/>普通函数在调用时，this也指向window</div>
-					<pre>
+					<pre class="example">
 					var obj = {
 						x:10,
 						fn:function(){
@@ -73,7 +73,7 @@
 					</pre>
 					</li>
 					<li>函数用call或者apply调用，this的值就取传入的对象的值
-					<pre>
+					<pre class="example">
 					var obj ={
 						x:10
 					}
@@ -86,7 +86,7 @@
 					</pre>
 					</li>
 					<h3>这是一个终极而且简直了的例子</h3>
-					<pre>
+					<pre class="example">
 					function Foo(){
 						getName = function(){     //这是一个全局的变量
 					  		console.log(1);	
