--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<li><a href="summary/4.10eventBinding.html">4.10 JS 事件侦听</a></li>
 						<li><a href="summary/4.10eventBinding.html">4.11-4.12 各种神奇的效果</a></li>
 						<li><a href="summary/4.13 this_OOP.html">4.13 面向对象、this的指向</a></li>
-						<li><a href="summary/4.13 this_OOP.html">4.17Ajax</a></li>
+						<li><a href="summary/4.17-4.18 ajax.html">4.17-4.18Ajax</a></li>
 					</ul>
 				</div>
 			</div>
