--- a/summary/4.17-4.18 ajax.html
+++ b/summary/4.17-4.18 ajax.html
@@ -107,14 +107,12 @@
 						</pre>
 					</li>
 					<li>适用场景
-						<ul class="second">
-							<li>表单驱动的交互</li>
-							<li>深层次的树的导航</li>
-							<li>快速的用户与用户间的交流响应</li>
-							<li>类似投票、yes/no等无关痛痒的场景</li>
-							<li>对数据进行过滤和操纵相关数据的场景</li>
-							<li>普通的文本输入提示和自动完成的场景</li>
-						</ul>
+						<br />表单驱动的交互
+						<br />深层次的树的导航
+						<br />快速的用户与用户间的交流响应
+						<br />类似投票、yes/no等无关痛痒的场景
+						<br />对数据进行过滤和操纵相关数据的场景
+						<br />普通的文本输入提示和自动完成的场景
 					</li>
 					<li>不适用场景
 						<ul class="second">
