--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 						<li><a href="summary/4.13 this_OOP.html">4.13 面向对象、this的指向</a></li>
 						<li><a href="summary/4.17-4.18 ajax.html">4.17-4.18Ajax</a></li>
 						<li><a href="summary/4.24-25 canvas.html">4.24-4.25 canvas</a></li>
+						<li><a href="summary/4.27 API.html">4.27 HTML5 API</a></li>
 					</ul>
 				</div>
 			</div>
