--- a/summary/4.27 API.html
+++ b/summary/4.27 API.html
@@ -96,7 +96,7 @@
 			window.URL = window.URL ||
 			window.mozURL ||
 			window.webkitURL ||
-			window.maURL;
+			window.msURL;
 			//获取成功时			
 			function successFun(stream){
 				if(myVideo.mozSrcObject !== undefined){
