--- a/summary/4.27 API.html
+++ b/summary/4.27 API.html
@@ -56,12 +56,17 @@
 				text-decoration: none;
 				color: #333;
 			}
-			#name{
+			#ipt{
+				position: absolute;
+				top:30px;
 				border: 1px solid #fff;
 				padding: 10px;
+				width: 178px;
 				/*outline: none;*/
 			}
 			#div{
+				position: absolute;
+				top: 70px;
 				height: 200px;
 				width: 200px;
 			}
