--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 						<li><a href="summary/4.24-25 canvas.html">4.24-4.25 canvas</a></li>
 						<li><a href="summary/4.26 example.html">4.26  补充的几个小例子</a></li>
 						<li><a href="summary/4.27 API.html">4.27 HTML5 API</a></li>
+						<li><a href="summary/5.2 sql.html">5.2 数据库</a></li>
 						<li><a href="summary/5.3 css3.html">5.3 css3</a></li>
 					</ul>
 				</div>
