--- a/summary/5.3 css3.html
+++ b/summary/5.3 css3.html
@@ -19,7 +19,7 @@
 		</div> 
 		<div class="box"> 
 			<div class="left">
-				<h2>CSS选择器（加强版）</h2>
+				<h2>CSS3 选择器（加强版）</h2>
 				<ul class="first">
 					<li>属性选择器
 						<ul class="second">
