--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 						<li><a href="summary/4.27 API.html">4.27 HTML5 API</a></li>
 						<li><a href="summary/5.2 sql.html">5.2 数据库</a></li>
 						<li><a href="summary/5.3 css3.html">5.3 css3</a></li>
+						<li><a href="summary/5.4 布局.html">5.4 布局</a></li>
 					</ul>
 				</div>
 			</div>
