--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 						<li><a href="summary/5.2 sql.html">5.2 数据库</a></li>
 						<li><a href="summary/5.3 css3.html">5.3 css3</a></li>
 						<li><a href="summary/5.4 布局.html">5.4 布局</a></li>
+						<li><a href="summary/5.9 jquery（0）.html">5.9  jQuery事件</a></li>
+						<li><a href="summary/5.10 jQuery实例.html">5.10  jQuery效果实例</a></li>
 					</ul>
 				</div>
 			</div>
