--- a/summary/5.9 jquery（0）.html
+++ b/summary/5.9 jquery（0）.html
@@ -64,8 +64,15 @@
 						});   
 						</pre>
 					</li>
-					
-				</ul>
+					<li>clone():克隆事件<br />
+						克隆匹配的DOM元素并且选中这些克隆的副本。<br />
+						在想把DOM文档中元素的副本添加到其他位置时这个函数非常有用。
+						<pre class="example">
+							克隆所有b元素（并选中这些克隆的副本），然后将它们前置到所有段落中。
+							$("b").clone().prependTo("p");
+						</pre>
+					</li>
+				</ul> 
 			</div>
 		</div>
 		<!--页脚-->
