--- a/summary/Event.html
+++ b/summary/Event.html
@@ -56,15 +56,17 @@
 					</li>
 					<li>鼠标事件
 						<ul class="second">
-							<li>mousedown:鼠标设备按下一个元素的时候触发mousedown事件</li>
-							<li>mouseup: 鼠标设备从按下的元素上弹起的时候触发mouseup事件</li>
-							<li>click:鼠标点击元素的时候触发click事件</li>
-							<li>dblclick:鼠标双击元素的时候触发dblclick事件</li>
-							<li>mousemover:鼠标移动到某元素上的时候触发mousemove事件</li>
-							<li>mouseout：鼠标从某元素离开的时候触发mouseout事件</li>
-							<li>mousemove：鼠标在某元素上移动但未离开的时候触发mousemove事件</li>
-							<li>mouseleave：鼠标离开时触发</li>
-							<li>mouseenter：鼠标进入时触发
+							<li>mousedown:鼠标设备按下一个元素的时候触发mousedown事件<br />
+								mouseup: 鼠标设备从按下的元素上弹起的时候触发mouseup事件
+							</li>
+							<li>click:鼠标点击元素的时候触发click事件<br />
+								dblclick:鼠标双击元素的时候触发dblclick事件
+							</li>
+							<li>mousemover:鼠标移动到某元素上的时候触发mousemove事件<br />
+								mouseout：鼠标从某元素离开的时候触发mouseout事件<br />
+								mousemove：鼠标在某元素上移动但未离开的时候触发mousemove事件<br />
+								mouseleave：鼠标离开时触发<br />
+								mouseenter：鼠标进入时触发
 								<div class="font">mouseleave和mouseenter与mousemover和 mouseout的区别是前者不支持冒泡</div>
 							</li>
 							<li>mousewheel：当使用滚轮时触发</li>
