--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 						<li><a href="summary/5.9 jquery（0）.html">5.9  jQuery事件</a></li>
 						<li><a href="summary/5.10 jQuery实例.html">5.10  jQuery效果实例</a></li>
 						<li><a href="summary/5.22  Bootstrap_css.html">5.22  Bootstrop全局CSS样纸</a></li>
+						<li><a href="summary/5.23  Bootstrap_2.html">5.23  Bootstrop组件</a></li>
 					</ul>
 				</div>
 			</div>
